Fixed an issue with headings being off center

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -39,7 +39,7 @@ a.socialLink:hover img {
 }
 
 .heading{
-  margin: 0.5em;
+  margin: 0;
   margin-top: 20vh;
   font-size: 3em;
   color: #00FF41;
